bugs/tests/fuzz-05-18-13-21-59/r_600_r_42_issue3623-1_F10_P42_6_M0.stderr
likely_hits/r_600_r_42_issue3623-1_F10_P42_6_M0.p4(2): [--Werror=type-error] error: string: cast not supported
 a = ((string) (true)) };
       ^^^^^^
In file: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172
Compiler Bug: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172: Null srcType

